test/bad/icstrlit-in.c
/* Invalid character inside string literal */
char *s = "";
